# algotrader

./: .gitignore  design_doc.txt  pyproject.toml
docs/: data_caching_strategy.txt
src/algotrader/: __main__.py  backtest.py  backtest_svm.py  debug.py  features.py  ingest.py  logger.py  research.py  trade.py  train.py
src/algotrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/algotrader/external_api/: alpaca_api.py  finviz_api.py  ibkr_api.py  polygon_api.py  tickers.py  wikipedia_scraper.py
src/algotrader/features/: indicators.py  prep.py
src/algotrader/models/: lstm.py  train_svm.py
tests/: test_alpaca.py  test_ibkr.py
