[project]
name = "algotrader"
version = "0.1.0"
description = "Lumibot trading bot using Alpaca for data and IBKR for execution"
dependencies = [
    "lumibot",
    "alpaca-py",
    "ib_async",
    "pandas",
    "lxml",
    "scikit-learn",
    "python-dotenv",
    "joblib",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
